# pincel

./: Cargo.toml  README.md  build.rs
assets/shaders/: cube.frag  cube.vert  debug_lines.frag  debug_lines.vert  line.frag  line.vert  triangle.frag  triangle.vert
src/: app_initializer.rs  application.rs  color.rs  error.rs  event_handler.rs  graphics_context.rs  main.rs  movement.rs  rhomboid.rs  window.rs  window_builder.rs
src/application/: app.rs  app_initializer.rs  cli.rs  config.rs  mod.rs
src/commands/: draw_command.rs  exit_command.rs  key_press_command.rs  left_click_command.rs  left_release_command.rs  middle_click_command.rs  mod.rs  motion_command.rs  right_click_command.rs  scroll_wheel_down_command.rs  scroll_wheel_up_command.rs
src/core/: application.rs  clock.rs  event.rs  input.rs  logger.rs  mod.rs  resources.rs
src/core/platform/: mod.rs  xorg.rs
src/core/renderer/: mod.rs  renderer_backend.rs
src/core/renderer/opengl/: buffer.rs  color_buffer.rs  context.rs  cube.rs  data.rs  debug_lines.rs  line.rs  line_point.rs  mod.rs  render.rs  shader.rs  shared_debug_lines.rs  texture.rs  triangle.rs  vertex.rs  viewport.rs
src/core/renderer/opengl/camera/: mod.rs  movement.rs  target_camera.rs
src/domain/: error.rs  event_handler.rs  mod.rs
src/domain/entities/: color.rs  graphics_context.rs  keys.rs  mod.rs  movement.rs
src/gui/: mod.rs
src/gui/gtk/: gtk.css  window.rs
src/gui/x11/: mod.rs  window_builder.rs
