cargo-features = ["strip"]

[package]
name = "pincel"
version = "0.1.0"
authors = ["Jeriel <jeriel.verissimo@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.6.0"
x11 = { version = "2.18.2", features = ["xlib"]  }
image = "0.23.8"
chrono = "0.4.15"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

