cargo-features = ["strip"]

[package]
name = "pincel"
version = "0.1.0"
authors = ["Jeriel <jeriel.verissimo@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.9.0", features = ["allow-unsafe-code"] } 
x11 = { version = "2.18.2", features = ["xlib"] }
chrono = "0.4.15"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

