[package]
name = "pincel"
version = "0.1.0"
authors = ["Jeriel <jeriel.verissimo@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.9.0", features = ["allow-unsafe-code", "glx", "all-extensions"] } 
x11 = { version = "2.19.1", features = ["xlib", "xlib_xcb", "glx"] }
chrono = "0.4.19"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
gl = "0.14.0"
x11-dl = "2.19.1"
gl_loader = "0.1.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
